// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons Material Primary Button Renders Action Style - GREEN 1`] = `
<div>
  <button
    class="MuiButtonBase-root-27 MuiFab-root-37"
    style="background: rgb(32, 191, 107); color: rgb(245, 246, 250);"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label-38"
    >
      Action
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`Buttons Material Primary Button Renders Action Style 1`] = `
<div>
  <button
    class="MuiButtonBase-root-27 MuiFab-root-37"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label-38"
    >
      Action
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`Buttons Material Primary Button Renders Extended Action Style 1`] = `
<div>
  <button
    class="MuiButtonBase-root-27 MuiFab-root-37 MuiFab-extended-41"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label-38"
    >
      Extended Action
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`Buttons Material Primary Button Renders Primary Style - GREEN 1`] = `
<div>
  <button
    class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-raised-15"
    style="background: rgb(32, 191, 107); color: rgb(245, 246, 250);"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-2"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`Buttons Material Primary Button Renders Primary Style 1`] = `
<div>
  <button
    class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-raised-15"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-2"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`Buttons Material Primary Button Renders Secondary Style - GREEN 1`] = `
<div>
  <button
    class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-outlined-9"
    style="color: rgb(32, 191, 107); border-color: #20bf6b;"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-2"
    >
      Secondary
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`Buttons Material Primary Button Renders Secondary Style 1`] = `
<div>
  <button
    class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-outlined-9"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-2"
    >
      Secondary
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`Buttons Material Primary Button Renders Tertiary Style 1`] = `
<div>
  <button
    class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-2"
    >
      Tertiary
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </button>
</div>
`;

exports[`Buttons Reactstrap Primary Button Renders Primary Style 1`] = `
<div>
  <button
    class="btn btn-secondary"
    type="button"
  >
    Primary
  </button>
</div>
`;

exports[`Buttons Reactstrap Primary Button Renders Secondary Style 1`] = `
<div>
  <button
    class="btn btn-outline-secondary"
    type="button"
  >
    Secondary
  </button>
</div>
`;

exports[`Buttons Semantic Primary Button Renders Primary Style 1`] = `
<div>
  <button
    class="ui button"
  >
    Primary
  </button>
</div>
`;

exports[`Buttons Semantic Primary Button Renders Secondary Style 1`] = `
<div>
  <button
    class="ui basic button"
  >
    Secondary
  </button>
</div>
`;

exports[`Buttons Semantic Primary Button Renders Tertiary Style 1`] = `
.c0 .ui.basic.button {
  box-shadow: none !important;
}

<div>
  <div
    class="c0"
  >
    <button
      class="ui basic button"
    >
      Tertiary
    </button>
  </div>
</div>
`;
